style.css
html, body {
    margin: 0;
    scroll-behavior: smooth;
    -ms-overflow-style: none;
    scrollbar-width: none;
    font-family: 'Work Sans', sans-serif;
}

.body::-webkit-scrollbar {
    display: none;
  }

/* START HOME PAGE */
.page {
    background-color: #111111;
    position: relative;
    display: block;
}

/*    #d87093   */

/* Start Nav Bar */

.bad-script-font {
    letter-spacing: 3px;
    font-family: 'Cormorant Garamond', serif;
    /* Cutive Mono */
}

.nav-zone {
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    height: 12.5vh;
    padding: 0em 4em;
}

.nav-links {
    display: flex;
    list-style: none;
    font-size: 0.7em;
    justify-content: center;
    margin: 0;
    padding: 0;
} 

.count {
    counter-increment: item 1;
}

.count::before {
    content: "0" counter(item) ".";
    font-size: 16px;
    color: aqua;
}

.nav-links li {
    padding: 20px;
}

#resume a {
    color:aqua;
}

.nav-zone a {
    color: #fff;
    text-decoration: none;
    font-size: 1.5em;
    padding: 12px 10px;
}

.nav-zone .logo a:hover {
    color:#fff;
    text-decoration: none;
}

.nav-links a:hover {
    transition: all 0.3s;
    color: aqua;
}

.logo a {
    font-size: 2em;
}
/* Start BURGER MENU */
.burger {
    display: none;
}

.burger div {
    width: 25px;
    height: 3px;
    background-color: #fff;
    margin: 6px;
    transition: all 0.3s ease;
}

@media screen and (max-width: 1024px) {
    body {
        overflow-x: hidden;
    }

    .nav-zone {
        padding: 0em 2em;
    }

    .nav-links {
        position: absolute;
        right: 0px;
        height: 100vh;
        top: 0vh;
        display: flex;
        flex-direction: column;
        background-color: #000;
        opacity: 0.95;
        align-items: center;
        width: 100%;
        transform: translateX(100%);
        transition: transform 0.5 ease-in;
        position: fixed;
    }

    .count::before {
        font-size: 2.5em;
    }

    .nav-links a {
        font-size: 3.5em;
    }

    .nav-links li {
        opacity: 0;
    }

    .burger {
        display: block;
        cursor: pointer;
        /*position: fixed;*/
    }

    .logo a {
        font-size: 2.5em;
    }
}

.nav-active {
    transform: translateX(0%);
}
/* End BURGER MENU

/* Start Nav Burger Animation */
@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-6px, 6.5px);
}
.toggle .line2 {
    opacity: 0;
}
.toggle .line3 {
    transform: rotate(45deg) translate(-6px, -6.5px);
}
/* End Nav Burger Animation */
/* End Nav Bar */

.container {
    padding-bottom: 10em; 
}

/* Start Jumbotron */
.jumbotron {
    display: flex;
    flex-direction: column;
    background: transparent;
    justify-content: space-around;
    align-self: center;
    padding: 0;
    margin: 0;
    margin-top: 10em;
}


@media screen and (max-width: 1024px) {
    .jumbotron {
        margin-top: 7em;
    }
}

@media screen and (max-width: 720px) {
    .jumbotron {
        margin-top: 3em;
    }
}

.title {
    color: #fff;
    font-family: 'Montserrat', sans-serif;
    font-size: 5em;
    margin-bottom: 10px;

}

#hi {
    font-size: 1.5em;
    color: aqua;
    font-weight: normal;
    padding-left: 5px;
    margin-bottom: 5px;
}

.subtitle {
    color: #9b9a9a;
    font-family: 'Montserrat', sans-serif;
    font-size: 4em;
    margin-bottom: 0.5em;
}

#mini-text {
    color: #9b9a9a;
    font-size: 1.5em;
    margin-bottom: 0.5em;
}

@media screen and (max-width: 720px) {
    #hi {
        font-size: 1em;
        margin-bottom: 3px;
    }
    .title {
        font-size: 3em;
    }
    .subtitle {
        font-size: 2em;
        margin-bottom: 1em;
    }

    .logo a {
        padding-left: 0;
    }
}

.page .btn {
    display: inline-block;
    text-align: center;
    font-size: 1em;
    margin-top: 2em;
    border: 2px solid aqua;
    background-color: transparent;
}

.page .custom-btn {
    padding: 0.1em 1em;
    min-width: 150px;
    outline: none;
    border-radius: 3px;
    color: aqua;
    font-size: 1em;
    transition: all 0.3s;
    padding: 0.5em 0.5em;
}

.page .btn:hover {
    transform: scale(1.1);
    color: #fff;
    background-color: rgb(0, 66, 66);
}

@media screen and (max-width: 720px) {
    .btn {
        background-color: #050505;
    }
}
/* End Jumbotron */
/* END HOME PAGE */

.count-titles {
    color: aqua;
    font-size: 0.5em;
    padding: 0;
    margin: 0;
}

.titles {
    padding-top: 3em;
    color: #ffffff;
    font-size: 3em;
    text-align: left;
    letter-spacing: 5px;
    display: flex;
}

.titles::after {
    content: "";
    display: block;
    height: 1px;
    width: 300px;
    background-color: #9b9a9a;
    position: relative;
    margin-left: 20px;
    margin-top: 30px;
}

/* START AB0UT PAGE */
#about {
    background-color: #111;
    position: relative;
    display: block;
}

.about-title {
    color: #fff;
    text-align: left;
    font-size: 3em;
    padding-top: 2em;
    letter-spacing: 0.2em;
    display: flex;
}

.about-title:after {
    content: "";
    display: block;
    height: 1px;
    width: 300px;
    background-color: rgb(255, 255, 255);
    position: relative;
    margin-left: 20px;
    margin-top: 35px;
}

.about-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.about-content .row {
    padding-bottom: 0;
}

#profile-pic {
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-text {
    font-size: 1.25em;
    color: #9b9a9a;
}

.about-text a{
    color: aqua;
    font-size: 1em;
    text-decoration: none;
}
#country {
    color: aqua;
}
/* END ABOUT PAGE */

/* START SKILLS PAGE */
#skills {
    background-color: #111;
    position: relative;
    display: block;
}

.skills-text{
    color: #fff;
    font-size: 3em;
    /*border-bottom: 2px solid #d87093;*/
    text-align: center;
    letter-spacing: 0.2em;
}

/* Make the flex to wrap when it doesn't fit */
#skills .row {
    display: flex;
    flex-wrap: wrap;
    gap: 2em;
    margin: 0;
    padding: 5em 0;
    justify-content: space-between;
}

/* Make the flex to adjust by the container */
#skills .row > * {
    flex-basis: calc(calc(800px - 100%) * 999);
    flex-grow: 1;
    text-align: center;
    color: #9b9a9a;
    font-size: 1em;
}

#skills .row h2 {
    padding-bottom: 1em;
    color: aqua;
}
/* END SKILLS PAGE */

/* START PROJECT PAGE */
#projects {
    background-color: #111;
    position: relative;
    display: block;
}

/* Make the flex to wrap when it doesn't fit */
.row {
    display: flex;
    flex-wrap: wrap;
    gap: 2em;
    margin: 0;
    padding: 5em 0;
}

/* Make the flex to adjust by the container */
.row > * {
    flex-basis: calc(calc(800px - 100%) * 999);
    flex-grow: 1;
}

.img-fluid {
    max-width: 100%;
    height: auto;
}

.text-project {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.name-project {
    font-size: 2em;
}

#projects .btn {
    display: inline-block;
    text-align: center;
    font-size: 1em;
    margin-top: 0.5em;
    border: 2px solid #979ea5;
    background-color: transparent;
}

#projects .custom-btn {
    padding: 0.1em 1em;
    min-width: 200px;
    outline: none;
    border-radius: 0px;
    color: #0E7EF8;
    font-size: 1.5em;
    transition: all 0.3s;
    margin: 0;
}

#projects .btn:hover {
    transform: scale(1.1);
    color: #fff;
    background-color: #0E7EF8;
}

/* Change the text and image order when show as column */
@media screen and (max-width: 990px) {
    #projects #a {
        order: 2;
    }

    #projects #b {
        order: 1;
    }
}
/* END PROJECT PAGE */


/* START CONTACT PAGE */
#contact {
    background-color: #111;
    position: relative;
    display: flex;
}

.contact-title {
    color: #fff;
    padding-top: 4em;
    font-size: 3em;
    text-align: center;
    letter-spacing: 0.2em;
    display: flex;
    justify-content: center;
}

#contact #lets-talk {
    color: #fff;
    padding-top: 2em;
    font-size: 2em;
    text-align: center;

}
#contact .row {
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#contact .btn {
    color: #fff;
    border-color: #fff;
    margin-top: 0.5em;
    border: 2px solid #fff;

}

#contact .custom-btn {
    padding: 0.5em 0em;
    width: 300px;
    outline: none;
    border-radius: 0px;
    color: #fff;
    font-size: 1.5em;
    transition: all 0.3s;
}

#contact .btn:hover {
    transform: scale(1.1);
    color: #0E7EF8;
    background-color: #fff;
}

/* FOOTER START */
#copyright {
    background-color: #111;
}

#copyright {
    flex-direction: row;
}

#copyright .row {
    padding: 0;
}

.footer-links {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

.push {
    margin-left: auto;
}

.copyright-text {
    display: flex;
    font-size: 1em;
    color: #fff;
    margin: 0 0 0 1em;
    justify-content: flex-start;
    align-items: center;
}

/* Make the footer responsive */
@media screen and (max-width: 800px) {
    #copyright .row .copyright-text {
        order: 2;
    }

    #copyright .row .footer-links {
        order: 1;
    }
    
    #copyright .row .push {
        margin: 0;
    }
}
/* FOOTER END */

